# metagnn

./: README.md  environment.yaml  pyproject.toml
metagnn/: __init__.py  utils.py
metagnn/plot/: __init__.py
metagnn/tools/: __init__.py  data.py  metrics.py  minimizer.py
notebooks/: minimizer.ipynb  test.ipynb
src/metagnn/: metagnn.py  utils.py
src/metagnn/plot/: __init__.py  evals.py  utils.py
src/metagnn/scripts/: build.py
src/metagnn/tools/: __init__.py  classify.py  common.py  eval_cluster.py  evals.py  pipeline.py  sample.py  utils.py
src/metagnn/tools/data/: __init__.py  build_simililarity.py  debruijn.py  download.py  loaders.py  lzani.py  mash.py  mash.sh
src/metagnn/tools/model/: __init__.py  decoder.py  encoder.py  encoder_gat.py  vae.py
src/metagnn/tools/scrap/: pairwise.cpp  pairwise.py  pairwise_aligner  pairwise_aligner_unnorm  pairwise_norm.py  run.sh
